--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<p class = "title" id="label">Please Select an Operation to Draw</p>
 		<div class="field">
 			<canvas id="mathSymbol" width="32" height="32"></canvas>
-			<p class = "title" id="count">Operation Image Count</p>
+			<p class = "title" id="count">0 Images</p>
 			<div class="tools">
 				<button id = "clearBtn" onclick="erase()">Clear</button>
 				<button id = "saveBtn" onclick="save()">Save</button>
