--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<button id = "downloadBtn" onclick="download()">Download</button>
 			</div>
 		</div>
-		<p class = "title" id = "instructions">Keyboard Shortcuts:<br>"C" - Clear<br>"S" - Save</p>
+		<p class = "title" id = "instructions">Keyboard Shortcuts:<br>"C" - Clear<br>"S" - Save<br>Email: frvnkliu@gmail.com</p>
 		<script src="modules/jszip.min.js"></script>
 		<script src="modules/FileSaver.js"></script>
 		<script src="main.js"></script>
