--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<button id = "removeBtn" onclick="remove()">Remove</button>
 			</div>
 		</div>
-		<p class = "title" id = "instructions">Keyboard Shortcuts:<br>"C" - Clear<br>"S" - Save</p>
+		<p class = "title" id = "instructions">Keyboard Shortcuts:<br>"C" - Clear<br>"S" - Save<br>Email: frvnkliu@gmail.com</p>
 		<div class="tools">
 			<button id = "downloadBtn" onclick="download()">Download</button>
 		</div>
