--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
 				<button id = "removeBtn" onclick="remove()">Remove</button>
 			</div>
 		</div>
-		<p class = "title" id = "instructions">Keyboard Shortcuts:<br>"C" - Clear<br>"S" - Save<br>Email: frvnkliu@gmail.com</p>
+		<p class = "title" id = "instructions">Keyboard Shortcuts:<br>"C" - Clear<br>"S" - Save</p>
 		<div class="tools">
 			<button id = "downloadBtn" onclick="download()">Download</button>
+		</div>
+		<div style = "text-align: center; margin-top: 15px">
+			<a class = "title" href = "mailto: frvnkliu@gmail.com">Send Email</a>
 		</div>
 		<script src="modules/jszip.min.js"></script>
 		<script src="modules/FileSaver.js"></script>
