--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     </audio>
 
      <div id = "container">
+        <div id = secret>
+            <input type="text" name="color">
+        </div>
         <div id = "overlay">
             <div id = prompt>What is 1+1?</div>
             <input type="text" id = "introInput" name="name">
+            <button id = "submit">submit</button>
         </div>
     </div>
     <div id = "info">
