--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div id = "overlay">
             <div id = prompt>What is 1+1?</div>
-            <input type="text" id = "introInput" name="name">
+            <input type="text" id = "introInput">
             <button id = "submit">submit</button>
         </div>
     </div>
