--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input type="text" name="color">
         </div>
         <div id = "overlay">
-            <div id = prompt>What is 1+1?</div>
+            <div id = prompt>[**Contains Audio Elements**]<br>What is 1+1?</div>
             <input type="text" id = "introInput">
             <button id = "submit">submit</button>
         </div>
