added logo, changed title, also removed outdated code/elements + improved loading

--- a/index.html
+++ b/index.html
@@ -3,20 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>Spheres</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script type="module" src = "script.js" defer></script>
+    <link rel="icon" sizes="256x256" href="deltaFavicon.png">
 </head>
 <body>
     <audio id="bgAudio" loop = true>
         <source src="ethereal.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
-
      <div id = "container">
-        <div id = secret>
-            <input type="text" name="color">
-        </div>
         <div id = "overlay">
             <div id = prompt>[Headphones Reccomended]<br>What is 1+1?</div>
             <input type="text" id = "introInput">
