removed [headphones reccomended text]

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </audio>
      <div id = "container">
         <div id = "overlay">
-            <div id = prompt>[Headphones Reccomended]<br>What is 1+1?</div>
+            <div id = prompt>What is 1+1?</div>
             <input type="text" id = "introInput">
             <button id = "submit">submit</button>
         </div>
